changing br color

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 body
 {
   margin: 0;
+  background-color: beige;
   font-family: "HelveticaNeue", "Helvetica-Neue", "Helvetica Neue", "Helvetica", sans-serif;
 }
 
